    (Andrew Nester, Nikita)

- Opcache:
  . Fixed bug #74152 (if statement says true to a null variable). (Laruence)
  . Fixed bug #74019 (Segfault with list). (Laruence)

- OpenSSL:
  . Fixed bug #74022 (PHP Fast CGI crashes when reading from a pfx file).
    (Anatol)
  . Fixed bug #74159 (Writing a large buffer to a non-blocking encrypted stream
    fails with "bad write retry"). (trowski)

- Standard:
  . Fixed bug #74148 (ReflectionFunction incorrectly reports the number of
    arguments). (Laruence)
  . Fixed bug #74005 (mail.add_x_header causes RFC-breaking lone line feed).
    (Anatol)
  . Fixed bug #73118 (is_callable callable name reports misleading value for
    anonymous classes). (Adam Saponara)
  . Fixed bug #74105 (PHP on Linux should use /dev/urandom when getrandom is
    not available). (Benjamin Robin)

- Streams:
  . Fixed bug #73496 (Invalid memory access in zend_inline_hash_func).
    (Laruence)
  . Fixed bug #74090 (stream_get_contents maxlength>-1 returns empty string).
    (Anatol)


16 Feb 2017 PHP 7.0.16

- Core:
  . Fixed bug #73916 (zend_print_flat_zval_r doesn't consider reference).
    (Laruence)
  . Fixed bug #73876 (Crash when exporting **= in expansion of assign op).
    (Sara)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)
  . Fixed bug #73973 (assertion error in debug_zval_dump). (andrewnester)

- DOM:
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)

- DTrace:
  . Fixed bug #73965 (DTrace reported as enabled when disabled). (Remi)

- FPM:
  . Fixed bug #67583 (double fastcgi_end_request on max_children limit).
    (Dmitry Saprykin)
  . Fixed bug #69865 (php-fpm does not close stderr when using syslog). 
    (m6w6)

- GD:
  . Fixed bug #73968 (Premature failing of XBM reading). (cmb)

- GMP:
  . Fixed bug #69993 (test for gmp.h needs to test machine includes).
    (Jordan Gigov) 

- Intl:
  . Fix bug #73956 (Link use CC instead of CXX). (Remi)

- LDAP: